# ebel_rest

./: .bumpversion.cfg  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/source/: conf.py  index.rst
ebel_rest/: __init__.py  constants.py
ebel_rest/manager/: core.py  export.py  ss_functions.py  statistics.py
notebooks/: Examples.ipynb
src/ebel_rest/: __init__.py  core.py  defaults.py  export.py  query.py  statistics.py
src/ebel_rest/manager/: __init__.py  core.py  export.py  query.py  statistics.py
src/ebel_rest/visualisation/colours/: graphviz.py
tests/: __init__.py  constants.py  test_ebel_api_client.py
tests/test_core/: __init__.py  test_core.py
tests/test_export/: __init__.py  test_export.py
tests/test_query/: __init__.py  test_query.py
tests/test_statistics/: test_statistics.py
