# Setup configuration

[metadata]
name = ebel_rest
version = 1.0.20
description = e(BE:L) API client
long_description = file: README.rst

# URLs
url = https://github.com/e-bel/ebel_rest

# Author information
author = Christian Ebeling, Bruce Schultz
author_email = Christian.Ebeling@scai.fraunhofer.de, bruce.schultz@scai.fraunhofer.de
maintainer = Bruce Schultz
maintainer_email = bruce.schultz@scai.fraunhofer.de

# License Information
license = MIT License
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

keywords =
    BEL
    API
    OrientDB
    Knowledge Graph

[options]
install_requires =
    pandas
    IPython
    graphviz

# Random options
zip_safe = false
python_requires = >=3.6
include_package_data = True

# Where is my code
packages = find:
package_dir =
    = ebel_rest

[options.packages.find]
where = ebel_rest

########################
# Flake8 Configuration #
########################
[flake8]
# E128: continuation line under-indented for visual indent
# F401: imported but unused
ignore =
    E128
    F401
exclude =
    .git,
    __pycache__
    docs
max-line-length = 119


##########################
# Coverage Configuration #
# (.coveragerc)          #
##########################
[coverage:run]
branch = True
source = ebel_rest
omit =
    ebel_rest/__main__.py
    ebel_rest/cli.py
    tests/*
    docs/*

[coverage:paths]
source =
    ebel_rest
    .tox/*/lib/python*/site-packages/ebel_rest

[coverage:report]
show_missing = True
exclude_lines =
    def __str__
    def __repr__
